--- a/package.json
+++ b/package.json
@@ -1,18 +1,13 @@
 {
-  "name": "pet-shop",
-  "version": "1.0.0",
-  "description": "",
-  "main": "truffle.js",
-  "directories": {
-    "test": "test"
-  },
-  "scripts": {
-    "dev": "lite-server",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "ISC",
   "devDependencies": {
-    "lite-server": "^2.3.0"
+    "@nomicfoundation/hardhat-ethers": "^3.0.6",
+    "@nomicfoundation/hardhat-toolbox": "^5.0.0",
+    "ethers": "^6.13.2",
+    "hardhat": "^2.22.6"
+  },
+  "dependencies": {
+    "http": "^0.0.1-security",
+    "http-server": "^14.1.1",
+    "web3": "^4.11.1"
   }
 }
